# ttt-rs

./: Cargo.toml  README.md  index.html
src/: game_logic.rs  lib.rs  main.rs  win_graph.rs  wingraph.rs
ui/: appwindow.slint
