[package]
name = "ttt-rs"
version = "0.1.0"
authors = ["K3cs1 <kecskemetip@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.5"
env_logger = "0.11.3"
log = "0.4.21"
petgraph = "0.6.4"
petgraph-evcxr = "0.2.0"
rand = "0.8.5"
slint = "1.5.1"

[build-dependencies]
slint-build = "1.5.1"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3", features=["console"] }
console_error_panic_hook = "0.1.5"
getrandom = { version = "0.2.2", features = ["js"] }
