[package]
name = "ttt-rs"
version = "0.1.1"
authors = ["K3cs1 <kecskemetip@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
env_logger = "0.11.5"
log = "0.4.22"
petgraph = "0.6.5"
petgraph-evcxr = "0.2.0"
rand = "0.8.5"
slint = "1.8.0"

[build-dependencies]
slint-build = "1.8.0"

[lib]
path = "src/main.rs"
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.99" }
web-sys = { version = "0.3.76", features=["console"] }
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
